--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-256color:Tc"
 set -g status-position top
 set -g status-keys vi
 set -g history-limit 100000
