feat: add tmux history clearing bind key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind -n 'C-x' clear-history
+
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
 set -g pane-base-index 1
