feat: update tmux theme

--- a/.config/tmux/theme.conf
+++ b/.config/tmux/theme.conf
@@ -20,10 +20,9 @@ set -g status-style "bg=default,fg=default"
 set -g status-left "#[fg=#{@color_green}]#{@left_symbol}#[bg=#{@color_green},fg=#{@color_black}] #S #[bg=default,fg=#{@color_green}]#{@right_symbol}#[default] "
 run -b 'tmux set -g status-right "$(tmux show -gv @host)$(tmux show -gv @time)"'
 
-set -g window-status-format "#[fg=#{@color_white}]#{@left_symbol}#[bg=#{@color_white},fg=#{@color_black}] #I #W #[bg=default,fg=#{@color_white}]#{@right_symbol}#[default]"
+set -g window-status-format " #I #W "
 set -g window-status-current-format "#[fg=#{@color_pink}]#{@left_symbol}#[bg=#{@color_pink},fg=#{@color_black}] #I #W#[fg=#{@color_gray}]* #[fg=#{@color_pink},bg=default]#{@right_symbol}#[default]"
 set -g window-status-separator ""
-set -g window-status-last-style "list=focus"
 
 set -g pane-border-style "fg=#{@color_base}"
 set -g pane-active-border-style "fg=default"
