feat: update tmux theme

--- a/.config/tmux/theme.conf
+++ b/.config/tmux/theme.conf
@@ -17,12 +17,14 @@ set -gq @host "#[fg=#{@color_blue}]#{@left_symbol}#[bg=#{@color_blue},fg=#{@colo
 set -gq @time "#[fg=#{@color_yellow}]#{@left_symbol}#[bg=#{@color_yellow},fg=#{@color_black}] %Y-%m-%d %H:%M #[bg=default,fg=#{@color_yellow}]#{@right_symbol}#[default]"
 
 set -g status-style "bg=default,fg=default"
-set -g status-left "#[fg=#{@color_green}]#{@left_symbol}#[bg=#{@color_green},fg=#{@color_black}] #S #[bg=default,fg=#{@color_green}]#{@right_symbol}#[default] "
+set -g status-left "#{?client_prefix,#[fg=#{@color_yellow}],#[fg=#{@color_green}]}#{@left_symbol}#{?client_prefix,#[bg=#{@color_yellow}],#[bg=#{@color_green}]}#[fg=#{@color_black}] #S #[bg=default]#{?client_prefix,#[fg=#{@color_yellow}],#[fg=#{@color_green}]}#{@right_symbol}#[default] "
 run -b 'tmux set -g status-right "$(tmux show -gv @host)$(tmux show -gv @time)"'
 
 set -g window-status-format " #I #W "
 set -g window-status-current-format "#[fg=#{@color_pink}]#{@left_symbol}#[bg=#{@color_pink},fg=#{@color_black}] #I #W#[fg=#{@color_gray}]* #[fg=#{@color_pink},bg=default]#{@right_symbol}#[default]"
 set -g window-status-separator ""
+set -g window-status-activity-style "fg=#{@color_purple}"
+set -g window-status-bell-style "fg=#{@color_pink}"
 
 set -g pane-border-style "fg=#{@color_base}"
 set -g pane-active-border-style "fg=default"
