feat: update tmux theme

--- a/.config/tmux/theme.conf
+++ b/.config/tmux/theme.conf
@@ -10,18 +10,17 @@ set -gq @color_pink "#F4B8E4"
 set -gq @color_sky "#99d1db"
 set -gq @color_yellow "#e5c890"
 
-set -gq @left_symbol ""
-set -gq @right_symbol ""
+set -gq @window_sep ""
 
-set -gq @host "#[fg=#{@color_blue}]#{@left_symbol}#[bg=#{@color_blue},fg=#{@color_black}] #H #[bg=default,fg=#{@color_blue}]#{@right_symbol}#[default]"
-set -gq @time "#[fg=#{@color_yellow}]#{@left_symbol}#[bg=#{@color_yellow},fg=#{@color_black}] %Y-%m-%d %H:%M #[bg=default,fg=#{@color_yellow}]#{@right_symbol}#[default]"
+set -gq @host "#[fg=#{@color_blue},reverse]#{@window_sep}#[default]#[bg=#{@color_blue},fg=#{@color_black}] #H #[bg=default,fg=#{@color_blue}]#{@window_sep}#[default]"
+set -gq @time "#[fg=#{@color_yellow},reverse]#{@window_sep}#[default]#[bg=#{@color_yellow},fg=#{@color_black}] %Y-%m-%d %H:%M #[bg=default,fg=#{@color_yellow}]#{@window_sep}#[default]"
 
 set -g status-style "bg=default,fg=default"
-set -g status-left "#{?client_prefix,#[fg=#{@color_yellow}],#[fg=#{@color_green}]}#{@left_symbol}#{?client_prefix,#[bg=#{@color_yellow}],#[bg=#{@color_green}]}#[fg=#{@color_black}] #S #[bg=default]#{?client_prefix,#[fg=#{@color_yellow}],#[fg=#{@color_green}]}#{@right_symbol}#[default] "
+set -g status-left "#[fg=#{@color_green},reverse]#{?client_prefix,#[fg=#{@color_yellow}],}#{@window_sep}#[default]#{?client_prefix,#[bg=#{@color_yellow}],#[bg=#{@color_green}]}#[fg=#{@color_black}] #S #[bg=default]#{?client_prefix,#[fg=#{@color_yellow}],#[fg=#{@color_green}]}#{@window_sep}#[default] "
 run -b 'tmux set -g status-right "$(tmux show -gv @host)$(tmux show -gv @time)"'
 
 set -g window-status-format " #I #W "
-set -g window-status-current-format "#[fg=#{@color_pink}]#{@left_symbol}#[bg=#{@color_pink},fg=#{@color_black}] #I #W#[fg=#{@color_gray}]* #[fg=#{@color_pink},bg=default]#{@right_symbol}#[default]"
+set -g window-status-current-format "#[fg=#{@color_pink},bg=default,reverse]#{@window_sep}#[default]#[bg=#{@color_pink},fg=#{@color_black}] #I #W#[fg=#{@color_gray}]* #[fg=#{@color_pink},bg=default]#{@window_sep}#[default]"
 set -g window-status-separator ""
 set -g window-status-activity-style "fg=#{@color_purple}"
 set -g window-status-bell-style "fg=#{@color_pink}"
