--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -62,6 +62,7 @@ format = '[[$symbol $branch ](fg:yellow)]($style)'
 [git_status]
 ahead = "⇡$count"
 behind = "⇣$count"
+diverged = "⇕⇡$ahead_count ⇣$behind_count"
 style = "fg:yellow"
 format = '[[($all_status$ahead_behind )](fg:yellow)]($style)'
 
